--- a/RefreshResources/RefreshResources.csproj
+++ b/RefreshResources/RefreshResources.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.25.0" />
+    <PackageReference Include="Octokit" Version="0.29.0" />
     <PackageReference Include="System.Memory" Version="4.5.0-preview2-26406-04" />
   </ItemGroup>
 
