--- a/RefreshResources/RefreshResources.csproj
+++ b/RefreshResources/RefreshResources.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
+    <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.2.0" />
     <PackageReference Include="Octokit" Version="0.29.0" />
     <PackageReference Include="System.Memory" Version="4.5.0" />
   </ItemGroup>
