--- a/RefreshResources/RefreshResources.csproj
+++ b/RefreshResources/RefreshResources.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <TargetLatestRuntimePatch>false</TargetLatestRuntimePatch>
-    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishTrimmed>true</PublishTrimmed>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
