--- a/RefreshResources/RefreshResources.csproj
+++ b/RefreshResources/RefreshResources.csproj
@@ -17,10 +17,10 @@
   </PropertyGroup>
 
     <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
-    <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.2.0" />
-    <PackageReference Include="Octokit" Version="0.32.0" />
-    <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
+    <PackageReference Include="NuGet.Protocol" Version="5.3.1" />
+    <PackageReference Include="Octokit" Version="0.36.0" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 
 </Project>
