--- a/RefreshResources/RefreshResources.csproj
+++ b/RefreshResources/RefreshResources.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
     <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
     <PackageReference Include="NuGet.Protocol" Version="6.6.1" />
     <PackageReference Include="Octokit" Version="6.0.0" />
